--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~10.2.5",
     "@angular/compiler": "~10.2.5",
     "@angular/core": "~10.2.5",
+    "@angular/fire": "^6.0.4",
     "@angular/forms": "~10.2.5",
     "@angular/material": "~10.2.7",
     "@angular/platform-browser": "~10.2.5",
