--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,12 @@ after_success:
   - firebase deploy --token $FIREBASE_TOKEN --non-interactive # firebase deploy after angular-cli build
 
 notifications:
-  recipients:
-      - sanya.dassani@gmail.com
-      - jotvirk322@gmail.com
-      - henilpatel5498@gmail.com
-      - singhgagan988@gmail.com
-      - Ali.Nouhi@cestarcollege.com
+  email:
+    recipients:
+        - sanya.dassani@gmail.com
+        - jotvirk322@gmail.com
+        - henilpatel5498@gmail.com
+        - singhgagan988@gmail.com
+        - Ali.Nouhi@cestarcollege.com
     on_success: always # default: change
     on_failure: always # default: always
